# Greenhouse-Monitoring-and-Automation

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/master/scada/: scada.cpp
src/master/scada/env_control/: env_control.cpp  env_control.hpp
src/master/scada/env_control/actuator/: actuator.cpp  actuator.hpp
src/master/scada/gpio_line/: gpio_line.cpp  gpio_line.hpp
src/master/scada/ipc/: ipc.cpp  ipc.hpp
src/master/scada/radio_comm/: radio_comm.cpp  radio_comm.hpp
src/master/scada/radio_comm/radio_logs/: radio_logs.cpp  radio_logs.hpp
src/master/scada/tests/: mock_web_request.py
src/master/scada/tests/radio_comm/: radio_comm_test.cpp
src/master/scada/tests/test_suites/: env_control_test.cpp  ipc_test.cpp
src/master/web-api/: edge_device.py
src/sensor/: adc.c  adc.h  dht11.cpp  dht11.hpp  eeprom_ids.cpp  eeprom_ids.hpp  sensor.ino  timer.cpp  timer.hpp
